--- a/tabula.cabal
+++ b/tabula.cabal
@@ -54,7 +54,10 @@ executable tabula
   main-is:  tabula.hs
   
   -- Modules included in this executable, other than Main.
-  other-modules:       Tabula.Record
+  other-modules:        Tabula.Record
+                      , Tabula.Record.Console
+                      , Tabula.Destination
+                      , Tabula.Destination.File
   
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:    
@@ -69,6 +72,7 @@ executable tabula
                       , readline
                       , time
                       , unix
+                      , url
   
   -- Directories containing source files.
   -- hs-source-dirs:      
