Communicate with subprocesses using a Pseudo-tty.
This should allow programs like vim to work (although at the moment it
doesn't), relating to issue #5.

--- a/tabula.cabal
+++ b/tabula.cabal
@@ -58,6 +58,7 @@ executable tabula
                       , Tabula.Record.Console
                       , Tabula.Destination
                       , Tabula.Destination.File
+                      , Tabula.Strings
   
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:    
