--- a/tabula.cabal
+++ b/tabula.cabal
@@ -56,6 +56,7 @@ executable tabula
   -- Modules included in this executable, other than Main.
   other-modules:        Tabula.Record
                       , Tabula.Record.Console
+                      , Tabula.Exec
                       , Tabula.Destination
                       , Tabula.Destination.File
                       , Tabula.Strings
@@ -71,6 +72,9 @@ executable tabula
                       , network
                       , process >= 1.2.0
                       , readline
+                      , stm
+                      , stm-chans
+                      , stm-conduit
                       , time
                       , unix
                       , url
