--- a/tabula.cabal
+++ b/tabula.cabal
@@ -53,7 +53,7 @@ executable tabula
   -- .hs or .lhs file containing the Main module.
   main-is:  tabula.hs
 
-  ghc-options: -rtsopts
+  ghc-options: -rtsopts -threaded
   
   -- Modules included in this executable, other than Main.
   other-modules:        Tabula.Record
