Set up daemon, various other things.

--- a/tabula.cabal
+++ b/tabula.cabal
@@ -73,6 +73,7 @@ executable tabula
                       , hslogger
                       , network
                       , process >= 1.2.0
+                      , random
                       , stm
                       , stm-chans
                       , stm-conduit
