Clean up network socket on exit.

--- a/tabula.cabal
+++ b/tabula.cabal
@@ -70,6 +70,7 @@ executable tabula
                       , aeson
                       , bytestring
                       , conduit
+                      , directory
                       , hslogger
                       , network
                       , process >= 1.2.0
