Set up both the prompt command and debug trap agents.

--- a/tabula.cabal
+++ b/tabula.cabal
@@ -70,6 +70,7 @@ executable tabula
                       , aeson
                       , bytestring
                       , conduit
+                      , containers
                       , directory
                       , hslogger
                       , network
