Work on the daemon. PROMPT_COMMAND now working.
Note that sinking to files is a temporary measure, because once all
the data is being recorded correctly we need to sessionise it.

Trap command is still not working, need to explore why. One annoying
thing is that it fires on the prompt command events, which needs to
be sorted.

--- a/tabula.cabal
+++ b/tabula.cabal
@@ -74,6 +74,7 @@ executable tabula
                       , directory
                       , hslogger
                       , network
+                      , network-conduit
                       , process >= 1.2.0
                       , random
                       , stm
