Rewrite some of the resource transformer stuff.
Still not getting debug/trap events after the first. Guessing it's a
problem with the socket listener, now.

--- a/tabula.cabal
+++ b/tabula.cabal
@@ -78,6 +78,7 @@ executable tabula
                       , network-conduit
                       , process >= 1.2.0
                       , random
+                      , resourcet
                       , stm
                       , stm-chans
                       , stm-conduit
