Write out pretty JSON.

--- a/tabula.cabal
+++ b/tabula.cabal
@@ -68,6 +68,7 @@ executable tabula
   -- Other library packages from which modules are imported.
   build-depends:        base >=4.6 && <4.7
                       , aeson
+                      , aeson-pretty
                       , attoparsec-conduit
                       , bytestring
                       , conduit
