Set version of aeson < 0.7 to avoid bytestring issue.
This should be fixed at some point - see issue #7.

--- a/tabula.cabal
+++ b/tabula.cabal
@@ -74,11 +74,11 @@ executable tabula
   
   -- Other library packages from which modules are imported.
   build-depends:        base >=4.6 && <4.7
-                      , aeson
+                      , aeson < 0.7
                       , aeson-pretty
                       , attoparsec-conduit
                       , bytestring
-                      , conduit
+                      , conduit >= 1.0.9.3
                       , containers
                       , directory
                       , hslogger
