Add ability to push to redis.
Lacking a suitable options parser to switch between them.

--- a/tabula.cabal
+++ b/tabula.cabal
@@ -80,6 +80,7 @@ executable tabula
                       , conduit >= 1.0.9.3
                       , containers
                       , directory
+                      , hedis
                       , hslogger
                       , network
                       , optparse-applicative
