--- a/tabula.cabal
+++ b/tabula.cabal
@@ -75,12 +75,13 @@ executable tabula
   build-tools:          hsc2hs
 
   -- Other library packages from which modules are imported.
-  build-depends:        base >=4.6 && <4.7
+  build-depends:        base >=4.6 && <4.8
                       , aeson < 0.7
                       , aeson-pretty
                       , attoparsec-conduit
                       , bytestring
                       , conduit >= 1.0.9.3
+                      , conduit-extra
                       , containers
                       , directory
                       , filepath
